shadow/kleeDeploy/stp/src/parser/parsesmt2.output
State 256 conflicts: 33 reduce/reduce


Grammar

    0 $accept: cmd "end of file"

    1 cmd: commands "end of file"

    2 commands: commands cmdi
    3         | cmdi

    4 cmdi: LPAREN_TOK EXIT_TOK RPAREN_TOK
    5     | LPAREN_TOK CHECK_SAT_TOK RPAREN_TOK
    6     | LPAREN_TOK LOGIC_TOK STRING_TOK RPAREN_TOK
    7     | LPAREN_TOK NOTES_TOK attribute STRING_TOK RPAREN_TOK
    8     | LPAREN_TOK OPTION_TOK attribute RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK attribute DECIMAL_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK attribute RPAREN_TOK
   11     | LPAREN_TOK PUSH_TOK NUMERAL_TOK RPAREN_TOK
   12     | LPAREN_TOK POP_TOK NUMERAL_TOK RPAREN_TOK
   13     | LPAREN_TOK DECLARE_FUNCTION_TOK var_decl RPAREN_TOK
   14     | LPAREN_TOK DEFINE_FUNCTION_TOK function_decl RPAREN_TOK
   15     | LPAREN_TOK FORMULA_TOK an_formula RPAREN_TOK

   16 function_param: LPAREN_TOK STRING_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

   17 function_params: function_param
   18                | function_params function_param

   19 function_decl: STRING_TOK LPAREN_TOK function_params RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK an_term RPAREN_TOK
   20              | STRING_TOK LPAREN_TOK function_params RPAREN_TOK BOOL_TOK an_formula

   21 status: STRING_TOK

   22 attribute: SOURCE_TOK
   23          | CATEGORY_TOK
   24          | DIFFICULTY_TOK
   25          | VERSION_TOK
   26          | STATUS_TOK status
   27          | PRINT_TOK TRUE_TOK
   28          | PRINT_TOK FALSE_TOK

   29 var_decl: STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   30         | STRING_TOK LPAREN_TOK RPAREN_TOK BOOL_TOK
   31         | STRING_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

   32 an_mixed: an_formula
   33         | an_term
   34         | an_mixed an_formula
   35         | an_mixed an_term

   36 an_formulas: an_formula
   37            | an_formulas an_formula

   38 an_formula: TRUE_TOK
   39           | FALSE_TOK
   40           | FORMID_TOK
   41           | LPAREN_TOK EQ_TOK an_term an_term RPAREN_TOK
   42           | LPAREN_TOK DISTINCT_TOK an_terms RPAREN_TOK
   43           | LPAREN_TOK DISTINCT_TOK an_formulas RPAREN_TOK
   44           | LPAREN_TOK BVSLT_TOK an_term an_term RPAREN_TOK
   45           | LPAREN_TOK BVSLE_TOK an_term an_term RPAREN_TOK
   46           | LPAREN_TOK BVSGT_TOK an_term an_term RPAREN_TOK
   47           | LPAREN_TOK BVSGE_TOK an_term an_term RPAREN_TOK
   48           | LPAREN_TOK BVLT_TOK an_term an_term RPAREN_TOK
   49           | LPAREN_TOK BVLE_TOK an_term an_term RPAREN_TOK
   50           | LPAREN_TOK BVGT_TOK an_term an_term RPAREN_TOK
   51           | LPAREN_TOK BVGE_TOK an_term an_term RPAREN_TOK
   52           | LPAREN_TOK an_formula RPAREN_TOK
   53           | LPAREN_TOK NOT_TOK an_formula RPAREN_TOK
   54           | LPAREN_TOK IMPLIES_TOK an_formula an_formula RPAREN_TOK
   55           | LPAREN_TOK ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   56           | LPAREN_TOK AND_TOK an_formulas RPAREN_TOK
   57           | LPAREN_TOK OR_TOK an_formulas RPAREN_TOK
   58           | LPAREN_TOK XOR_TOK an_formula an_formula RPAREN_TOK
   59           | LPAREN_TOK EQ_TOK an_formula an_formula RPAREN_TOK
   60           | LPAREN_TOK LET_TOK LPAREN_TOK lets RPAREN_TOK an_formula RPAREN_TOK
   61           | LPAREN_TOK FUNCTIONID_TOK an_mixed RPAREN_TOK

   62 lets: let lets
   63     | let

   64 let: LPAREN_TOK STRING_TOK an_formula RPAREN_TOK
   65    | LPAREN_TOK STRING_TOK an_term RPAREN_TOK

   66 an_terms: an_term
   67         | an_terms an_term

   68 an_term: TERMID_TOK
   69        | LPAREN_TOK an_term RPAREN_TOK
   70        | SELECT_TOK an_term an_term
   71        | STORE_TOK an_term an_term an_term
   72        | LPAREN_TOK UNDERSCORE_TOK BVEXTRACT_TOK NUMERAL_TOK NUMERAL_TOK RPAREN_TOK an_term
   73        | LPAREN_TOK UNDERSCORE_TOK BVZX_TOK NUMERAL_TOK RPAREN_TOK an_term
   74        | LPAREN_TOK UNDERSCORE_TOK BVSX_TOK NUMERAL_TOK RPAREN_TOK an_term
   75        | ITE_TOK an_formula an_term an_term
   76        | BVCONCAT_TOK an_term an_term
   77        | BVNOT_TOK an_term
   78        | BVNEG_TOK an_term
   79        | BVAND_TOK an_term an_term
   80        | BVOR_TOK an_term an_term
   81        | BVXOR_TOK an_term an_term
   82        | BVXNOR_TOK an_term an_term
   83        | BVCOMP_TOK an_term an_term
   84        | BVSUB_TOK an_term an_term
   85        | BVPLUS_TOK an_term an_term
   86        | BVMULT_TOK an_term an_term
   87        | BVDIV_TOK an_term an_term
   88        | BVMOD_TOK an_term an_term
   89        | SBVDIV_TOK an_term an_term
   90        | SBVREM_TOK an_term an_term
   91        | SBVMOD_TOK an_term an_term
   92        | BVNAND_TOK an_term an_term
   93        | BVNOR_TOK an_term an_term
   94        | BVLEFTSHIFT_1_TOK an_term an_term
   95        | BVRIGHTSHIFT_1_TOK an_term an_term
   96        | BVARITHRIGHTSHIFT_TOK an_term an_term
   97        | LPAREN_TOK UNDERSCORE_TOK BVROTATE_LEFT_TOK NUMERAL_TOK RPAREN_TOK an_term
   98        | LPAREN_TOK UNDERSCORE_TOK BVROTATE_RIGHT_TOK NUMERAL_TOK RPAREN_TOK an_term
   99        | LPAREN_TOK UNDERSCORE_TOK BVREPEAT_TOK NUMERAL_TOK RPAREN_TOK an_term
  100        | UNDERSCORE_TOK BVCONST_DECIMAL_TOK NUMERAL_TOK
  101        | BVCONST_HEXIDECIMAL_TOK
  102        | BVCONST_BINARY_TOK
  103        | LPAREN_TOK FUNCTIONID_TOK an_mixed RPAREN_TOK


Terminals, with rules where they appear

"end of file" (0) 0 1
error (256)
NUMERAL_TOK (258) 11 12 16 19 29 31 72 73 74 97 98 99 100
BVCONST_DECIMAL_TOK (259) 100
BVCONST_BINARY_TOK (260) 102
BVCONST_HEXIDECIMAL_TOK (261) 101
DECIMAL_TOK (262) 9
FORMID_TOK (263) 40
TERMID_TOK (264) 68
STRING_TOK (265) 6 7 16 19 20 21 29 30 31 64 65
FUNCTIONID_TOK (266) 61 103
SOURCE_TOK (267) 22
CATEGORY_TOK (268) 23
DIFFICULTY_TOK (269) 24
VERSION_TOK (270) 25
STATUS_TOK (271) 26
PRINT_TOK (272) 27 28
UNDERSCORE_TOK (273) 16 19 29 31 72 73 74 97 98 99 100
LPAREN_TOK (274) 4 5 6 7 8 9 10 11 12 13 14 15 16 19 20 29 30 31 41
    42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 64
    65 69 72 73 74 97 98 99 103
RPAREN_TOK (275) 4 5 6 7 8 9 10 11 12 13 14 15 16 19 20 29 30 31 41
    42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 64
    65 69 72 73 74 97 98 99 103
BVLEFTSHIFT_1_TOK (276) 94
BVRIGHTSHIFT_1_TOK (277) 95
BVARITHRIGHTSHIFT_TOK (278) 96
BVPLUS_TOK (279) 85
BVSUB_TOK (280) 84
BVNOT_TOK (281) 77
BVMULT_TOK (282) 86
BVDIV_TOK (283) 87
SBVDIV_TOK (284) 89
BVMOD_TOK (285) 88
SBVREM_TOK (286) 90
SBVMOD_TOK (287) 91
BVNEG_TOK (288) 78
BVAND_TOK (289) 79
BVOR_TOK (290) 80
BVXOR_TOK (291) 81
BVNAND_TOK (292) 92
BVNOR_TOK (293) 93
BVXNOR_TOK (294) 82
BVCONCAT_TOK (295) 76
BVLT_TOK (296) 48
BVGT_TOK (297) 50
BVLE_TOK (298) 49
BVGE_TOK (299) 51
BVSLT_TOK (300) 44
BVSGT_TOK (301) 46
BVSLE_TOK (302) 45
BVSGE_TOK (303) 47
BVSX_TOK (304) 74
BVEXTRACT_TOK (305) 72
BVZX_TOK (306) 73
BVROTATE_RIGHT_TOK (307) 98
BVROTATE_LEFT_TOK (308) 97
BVREPEAT_TOK (309) 99
BVCOMP_TOK (310) 83
BITVEC_TOK (311) 16 19 29 31
ARRAY_TOK (312) 31
BOOL_TOK (313) 20 30
TRUE_TOK (314) 27 38
FALSE_TOK (315) 28 39
NOT_TOK (316) 53
AND_TOK (317) 56
OR_TOK (318) 57
XOR_TOK (319) 58
ITE_TOK (320) 55 75
EQ_TOK (321) 41 59
IMPLIES_TOK (322) 54
DISTINCT_TOK (323) 42 43
LET_TOK (324) 60
EXIT_TOK (325) 4
CHECK_SAT_TOK (326) 5
LOGIC_TOK (327) 6
NOTES_TOK (328) 7 9 10
OPTION_TOK (329) 8
DECLARE_FUNCTION_TOK (330) 13
DEFINE_FUNCTION_TOK (331) 14
FORMULA_TOK (332) 15
PUSH_TOK (333) 11
POP_TOK (334) 12
SELECT_TOK (335) 70
STORE_TOK (336) 71


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
cmd (83)
    on left: 1, on right: 0
commands (84)
    on left: 2 3, on right: 1 2
cmdi (85)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 3
function_param (86)
    on left: 16, on right: 17 18
function_params (87)
    on left: 17 18, on right: 18 19 20
function_decl (88)
    on left: 19 20, on right: 14
status (89)
    on left: 21, on right: 26
attribute (90)
    on left: 22 23 24 25 26 27 28, on right: 7 8 9 10
var_decl (91)
    on left: 29 30 31, on right: 13
an_mixed (92)
    on left: 32 33 34 35, on right: 34 35 61 103
an_formulas (93)
    on left: 36 37, on right: 37 43 56 57
an_formula (94)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59 60 61, on right: 15 20 32 34 36 37 52 53 54 55 58 59
    60 64 75
lets (95)
    on left: 62 63, on right: 60 62
let (96)
    on left: 64 65, on right: 62 63
an_terms (97)
    on left: 66 67, on right: 42 67
an_term (98)
    on left: 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
    86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103, on right:
    19 33 35 41 44 45 46 47 48 49 50 51 65 66 67 69 70 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    96 97 98 99


State 0

    0 $accept: . cmd "end of file"

    LPAREN_TOK  shift, and go to state 1

    cmd       go to state 2
    commands  go to state 3
    cmdi      go to state 4


State 1

    4 cmdi: LPAREN_TOK . EXIT_TOK RPAREN_TOK
    5     | LPAREN_TOK . CHECK_SAT_TOK RPAREN_TOK
    6     | LPAREN_TOK . LOGIC_TOK STRING_TOK RPAREN_TOK
    7     | LPAREN_TOK . NOTES_TOK attribute STRING_TOK RPAREN_TOK
    8     | LPAREN_TOK . OPTION_TOK attribute RPAREN_TOK
    9     | LPAREN_TOK . NOTES_TOK attribute DECIMAL_TOK RPAREN_TOK
   10     | LPAREN_TOK . NOTES_TOK attribute RPAREN_TOK
   11     | LPAREN_TOK . PUSH_TOK NUMERAL_TOK RPAREN_TOK
   12     | LPAREN_TOK . POP_TOK NUMERAL_TOK RPAREN_TOK
   13     | LPAREN_TOK . DECLARE_FUNCTION_TOK var_decl RPAREN_TOK
   14     | LPAREN_TOK . DEFINE_FUNCTION_TOK function_decl RPAREN_TOK
   15     | LPAREN_TOK . FORMULA_TOK an_formula RPAREN_TOK

    EXIT_TOK              shift, and go to state 5
    CHECK_SAT_TOK         shift, and go to state 6
    LOGIC_TOK             shift, and go to state 7
    NOTES_TOK             shift, and go to state 8
    OPTION_TOK            shift, and go to state 9
    DECLARE_FUNCTION_TOK  shift, and go to state 10
    DEFINE_FUNCTION_TOK   shift, and go to state 11
    FORMULA_TOK           shift, and go to state 12
    PUSH_TOK              shift, and go to state 13
    POP_TOK               shift, and go to state 14


State 2

    0 $accept: cmd . "end of file"

    "end of file"  shift, and go to state 15


State 3

    1 cmd: commands . "end of file"
    2 commands: commands . cmdi

    "end of file"  shift, and go to state 16
    LPAREN_TOK     shift, and go to state 1

    cmdi  go to state 17


State 4

    3 commands: cmdi .

    $default  reduce using rule 3 (commands)


State 5

    4 cmdi: LPAREN_TOK EXIT_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 18


State 6

    5 cmdi: LPAREN_TOK CHECK_SAT_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 19


State 7

    6 cmdi: LPAREN_TOK LOGIC_TOK . STRING_TOK RPAREN_TOK

    STRING_TOK  shift, and go to state 20


State 8

    7 cmdi: LPAREN_TOK NOTES_TOK . attribute STRING_TOK RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK . attribute DECIMAL_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK . attribute RPAREN_TOK

    SOURCE_TOK      shift, and go to state 21
    CATEGORY_TOK    shift, and go to state 22
    DIFFICULTY_TOK  shift, and go to state 23
    VERSION_TOK     shift, and go to state 24
    STATUS_TOK      shift, and go to state 25
    PRINT_TOK       shift, and go to state 26

    attribute  go to state 27


State 9

    8 cmdi: LPAREN_TOK OPTION_TOK . attribute RPAREN_TOK

    SOURCE_TOK      shift, and go to state 21
    CATEGORY_TOK    shift, and go to state 22
    DIFFICULTY_TOK  shift, and go to state 23
    VERSION_TOK     shift, and go to state 24
    STATUS_TOK      shift, and go to state 25
    PRINT_TOK       shift, and go to state 26

    attribute  go to state 28


State 10

   13 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK . var_decl RPAREN_TOK

    STRING_TOK  shift, and go to state 29

    var_decl  go to state 30


State 11

   14 cmdi: LPAREN_TOK DEFINE_FUNCTION_TOK . function_decl RPAREN_TOK

    STRING_TOK  shift, and go to state 31

    function_decl  go to state 32


State 12

   15 cmdi: LPAREN_TOK FORMULA_TOK . an_formula RPAREN_TOK

    FORMID_TOK  shift, and go to state 33
    LPAREN_TOK  shift, and go to state 34
    TRUE_TOK    shift, and go to state 35
    FALSE_TOK   shift, and go to state 36

    an_formula  go to state 37


State 13

   11 cmdi: LPAREN_TOK PUSH_TOK . NUMERAL_TOK RPAREN_TOK

    NUMERAL_TOK  shift, and go to state 38


State 14

   12 cmdi: LPAREN_TOK POP_TOK . NUMERAL_TOK RPAREN_TOK

    NUMERAL_TOK  shift, and go to state 39


State 15

    0 $accept: cmd "end of file" .

    $default  accept


State 16

    1 cmd: commands "end of file" .

    $default  reduce using rule 1 (cmd)


State 17

    2 commands: commands cmdi .

    $default  reduce using rule 2 (commands)


State 18

    4 cmdi: LPAREN_TOK EXIT_TOK RPAREN_TOK .

    $default  reduce using rule 4 (cmdi)


State 19

    5 cmdi: LPAREN_TOK CHECK_SAT_TOK RPAREN_TOK .

    $default  reduce using rule 5 (cmdi)


State 20

    6 cmdi: LPAREN_TOK LOGIC_TOK STRING_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 40


State 21

   22 attribute: SOURCE_TOK .

    $default  reduce using rule 22 (attribute)


State 22

   23 attribute: CATEGORY_TOK .

    $default  reduce using rule 23 (attribute)


State 23

   24 attribute: DIFFICULTY_TOK .

    $default  reduce using rule 24 (attribute)


State 24

   25 attribute: VERSION_TOK .

    $default  reduce using rule 25 (attribute)


State 25

   26 attribute: STATUS_TOK . status

    STRING_TOK  shift, and go to state 41

    status  go to state 42


State 26

   27 attribute: PRINT_TOK . TRUE_TOK
   28          | PRINT_TOK . FALSE_TOK

    TRUE_TOK   shift, and go to state 43
    FALSE_TOK  shift, and go to state 44


State 27

    7 cmdi: LPAREN_TOK NOTES_TOK attribute . STRING_TOK RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK attribute . DECIMAL_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK attribute . RPAREN_TOK

    DECIMAL_TOK  shift, and go to state 45
    STRING_TOK   shift, and go to state 46
    RPAREN_TOK   shift, and go to state 47


State 28

    8 cmdi: LPAREN_TOK OPTION_TOK attribute . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 48


State 29

   29 var_decl: STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   30         | STRING_TOK . LPAREN_TOK RPAREN_TOK BOOL_TOK
   31         | STRING_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

    LPAREN_TOK  shift, and go to state 49


State 30

   13 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK var_decl . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 50


State 31

   19 function_decl: STRING_TOK . LPAREN_TOK function_params RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK an_term RPAREN_TOK
   20              | STRING_TOK . LPAREN_TOK function_params RPAREN_TOK BOOL_TOK an_formula

    LPAREN_TOK  shift, and go to state 51


State 32

   14 cmdi: LPAREN_TOK DEFINE_FUNCTION_TOK function_decl . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 52


State 33

   40 an_formula: FORMID_TOK .

    $default  reduce using rule 40 (an_formula)


State 34

   41 an_formula: LPAREN_TOK . EQ_TOK an_term an_term RPAREN_TOK
   42           | LPAREN_TOK . DISTINCT_TOK an_terms RPAREN_TOK
   43           | LPAREN_TOK . DISTINCT_TOK an_formulas RPAREN_TOK
   44           | LPAREN_TOK . BVSLT_TOK an_term an_term RPAREN_TOK
   45           | LPAREN_TOK . BVSLE_TOK an_term an_term RPAREN_TOK
   46           | LPAREN_TOK . BVSGT_TOK an_term an_term RPAREN_TOK
   47           | LPAREN_TOK . BVSGE_TOK an_term an_term RPAREN_TOK
   48           | LPAREN_TOK . BVLT_TOK an_term an_term RPAREN_TOK
   49           | LPAREN_TOK . BVLE_TOK an_term an_term RPAREN_TOK
   50           | LPAREN_TOK . BVGT_TOK an_term an_term RPAREN_TOK
   51           | LPAREN_TOK . BVGE_TOK an_term an_term RPAREN_TOK
   52           | LPAREN_TOK . an_formula RPAREN_TOK
   53           | LPAREN_TOK . NOT_TOK an_formula RPAREN_TOK
   54           | LPAREN_TOK . IMPLIES_TOK an_formula an_formula RPAREN_TOK
   55           | LPAREN_TOK . ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   56           | LPAREN_TOK . AND_TOK an_formulas RPAREN_TOK
   57           | LPAREN_TOK . OR_TOK an_formulas RPAREN_TOK
   58           | LPAREN_TOK . XOR_TOK an_formula an_formula RPAREN_TOK
   59           | LPAREN_TOK . EQ_TOK an_formula an_formula RPAREN_TOK
   60           | LPAREN_TOK . LET_TOK LPAREN_TOK lets RPAREN_TOK an_formula RPAREN_TOK
   61           | LPAREN_TOK . FUNCTIONID_TOK an_mixed RPAREN_TOK

    FORMID_TOK      shift, and go to state 33
    FUNCTIONID_TOK  shift, and go to state 53
    LPAREN_TOK      shift, and go to state 34
    BVLT_TOK        shift, and go to state 54
    BVGT_TOK        shift, and go to state 55
    BVLE_TOK        shift, and go to state 56
    BVGE_TOK        shift, and go to state 57
    BVSLT_TOK       shift, and go to state 58
    BVSGT_TOK       shift, and go to state 59
    BVSLE_TOK       shift, and go to state 60
    BVSGE_TOK       shift, and go to state 61
    TRUE_TOK        shift, and go to state 35
    FALSE_TOK       shift, and go to state 36
    NOT_TOK         shift, and go to state 62
    AND_TOK         shift, and go to state 63
    OR_TOK          shift, and go to state 64
    XOR_TOK         shift, and go to state 65
    ITE_TOK         shift, and go to state 66
    EQ_TOK          shift, and go to state 67
    IMPLIES_TOK     shift, and go to state 68
    DISTINCT_TOK    shift, and go to state 69
    LET_TOK         shift, and go to state 70

    an_formula  go to state 71


State 35

   38 an_formula: TRUE_TOK .

    $default  reduce using rule 38 (an_formula)


State 36

   39 an_formula: FALSE_TOK .

    $default  reduce using rule 39 (an_formula)


State 37

   15 cmdi: LPAREN_TOK FORMULA_TOK an_formula . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 72


State 38

   11 cmdi: LPAREN_TOK PUSH_TOK NUMERAL_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 73


State 39

   12 cmdi: LPAREN_TOK POP_TOK NUMERAL_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 74


State 40

    6 cmdi: LPAREN_TOK LOGIC_TOK STRING_TOK RPAREN_TOK .

    $default  reduce using rule 6 (cmdi)


State 41

   21 status: STRING_TOK .

    $default  reduce using rule 21 (status)


State 42

   26 attribute: STATUS_TOK status .

    $default  reduce using rule 26 (attribute)


State 43

   27 attribute: PRINT_TOK TRUE_TOK .

    $default  reduce using rule 27 (attribute)


State 44

   28 attribute: PRINT_TOK FALSE_TOK .

    $default  reduce using rule 28 (attribute)


State 45

    9 cmdi: LPAREN_TOK NOTES_TOK attribute DECIMAL_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 75


State 46

    7 cmdi: LPAREN_TOK NOTES_TOK attribute STRING_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 76


State 47

   10 cmdi: LPAREN_TOK NOTES_TOK attribute RPAREN_TOK .

    $default  reduce using rule 10 (cmdi)


State 48

    8 cmdi: LPAREN_TOK OPTION_TOK attribute RPAREN_TOK .

    $default  reduce using rule 8 (cmdi)


State 49

   29 var_decl: STRING_TOK LPAREN_TOK . RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   30         | STRING_TOK LPAREN_TOK . RPAREN_TOK BOOL_TOK
   31         | STRING_TOK LPAREN_TOK . RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

    RPAREN_TOK  shift, and go to state 77


State 50

   13 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK var_decl RPAREN_TOK .

    $default  reduce using rule 13 (cmdi)


State 51

   19 function_decl: STRING_TOK LPAREN_TOK . function_params RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK an_term RPAREN_TOK
   20              | STRING_TOK LPAREN_TOK . function_params RPAREN_TOK BOOL_TOK an_formula

    LPAREN_TOK  shift, and go to state 78

    function_param   go to state 79
    function_params  go to state 80


State 52

   14 cmdi: LPAREN_TOK DEFINE_FUNCTION_TOK function_decl RPAREN_TOK .

    $default  reduce using rule 14 (cmdi)


State 53

   61 an_formula: LPAREN_TOK FUNCTIONID_TOK . an_mixed RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 81
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 82
    FORMID_TOK               shift, and go to state 33
    TERMID_TOK               shift, and go to state 83
    UNDERSCORE_TOK           shift, and go to state 84
    LPAREN_TOK               shift, and go to state 85
    BVLEFTSHIFT_1_TOK        shift, and go to state 86
    BVRIGHTSHIFT_1_TOK       shift, and go to state 87
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 88
    BVPLUS_TOK               shift, and go to state 89
    BVSUB_TOK                shift, and go to state 90
    BVNOT_TOK                shift, and go to state 91
    BVMULT_TOK               shift, and go to state 92
    BVDIV_TOK                shift, and go to state 93
    SBVDIV_TOK               shift, and go to state 94
    BVMOD_TOK                shift, and go to state 95
    SBVREM_TOK               shift, and go to state 96
    SBVMOD_TOK               shift, and go to state 97
    BVNEG_TOK                shift, and go to state 98
    BVAND_TOK                shift, and go to state 99
    BVOR_TOK                 shift, and go to state 100
    BVXOR_TOK                shift, and go to state 101
    BVNAND_TOK               shift, and go to state 102
    BVNOR_TOK                shift, and go to state 103
    BVXNOR_TOK               shift, and go to state 104
    BVCONCAT_TOK             shift, and go to state 105
    BVCOMP_TOK               shift, and go to state 106
    TRUE_TOK                 shift, and go to state 35
    FALSE_TOK                shift, and go to state 36
    ITE_TOK                  shift, and go to state 107
    SELECT_TOK               shift, and go to state 108
    STORE_TOK                shift, and go to state 109

    an_mixed    go to state 110
    an_formula  go to state 111
    an_term     go to state 112


State 54

   48 an_formula: LPAREN_TOK BVLT_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 81
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 82
    TERMID_TOK               shift, and go to state 83
    UNDERSCORE_TOK           shift, and go to state 84
    LPAREN_TOK               shift, and go to state 113
    BVLEFTSHIFT_1_TOK        shift, and go to state 86
    BVRIGHTSHIFT_1_TOK       shift, and go to state 87
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 88
    BVPLUS_TOK               shift, and go to state 89
    BVSUB_TOK                shift, and go to state 90
    BVNOT_TOK                shift, and go to state 91
    BVMULT_TOK               shift, and go to state 92
    BVDIV_TOK                shift, and go to state 93
    SBVDIV_TOK               shift, and go to state 94
    BVMOD_TOK                shift, and go to state 95
    SBVREM_TOK               shift, and go to state 96
    SBVMOD_TOK               shift, and go to state 97
    BVNEG_TOK                shift, and go to state 98
    BVAND_TOK                shift, and go to state 99
    BVOR_TOK                 shift, and go to state 100
    BVXOR_TOK                shift, and go to state 101
    BVNAND_TOK               shift, and go to state 102
    BVNOR_TOK                shift, and go to state 103
    BVXNOR_TOK               shift, and go to state 104
    BVCONCAT_TOK             shift, and go to state 105
    BVCOMP_TOK               shift, and go to state 106
    ITE_TOK                  shift, and go to state 107
    SELECT_TOK               shift, and go to state 108
    STORE_TOK                shift, and go to state 109

    an_term  go to state 114


State 55

   50 an_formula: LPAREN_TOK BVGT_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 81
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 82
    TERMID_TOK               shift, and go to state 83
    UNDERSCORE_TOK           shift, and go to state 84
    LPAREN_TOK               shift, and go to state 113
    BVLEFTSHIFT_1_TOK        shift, and go to state 86
    BVRIGHTSHIFT_1_TOK       shift, and go to state 87
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 88
    BVPLUS_TOK               shift, and go to state 89
    BVSUB_TOK                shift, and go to state 90
    BVNOT_TOK                shift, and go to state 91
    BVMULT_TOK               shift, and go to state 92
    BVDIV_TOK                shift, and go to state 93
    SBVDIV_TOK               shift, and go to state 94
    BVMOD_TOK                shift, and go to state 95
    SBVREM_TOK               shift, and go to state 96
    SBVMOD_TOK               shift, and go to state 97
    BVNEG_TOK                shift, and go to state 98
    BVAND_TOK                shift, and go to state 99
    BVOR_TOK                 shift, and go to state 100
    BVXOR_TOK                shift, and go to state 101
    BVNAND_TOK               shift, and go to state 102
    BVNOR_TOK                shift, and go to state 103
    BVXNOR_TOK               shift, and go to state 104
    BVCONCAT_TOK             shift, and go to state 105
    BVCOMP_TOK               shift, and go to state 106
    ITE_TOK                  shift, and go to state 107
    SELECT_TOK               shift, and go to state 108
    STORE_TOK                shift, and go to state 109

    an_term  go to state 115


State 56

   49 an_formula: LPAREN_TOK BVLE_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 81
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 82
    TERMID_TOK               shift, and go to state 83
    UNDERSCORE_TOK           shift, and go to state 84
    LPAREN_TOK               shift, and go to state 113
    BVLEFTSHIFT_1_TOK        shift, and go to state 86
    BVRIGHTSHIFT_1_TOK       shift, and go to state 87
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 88
    BVPLUS_TOK               shift, and go to state 89
    BVSUB_TOK                shift, and go to state 90
    BVNOT_TOK                shift, and go to state 91
    BVMULT_TOK               shift, and go to state 92
    BVDIV_TOK                shift, and go to state 93
    SBVDIV_TOK               shift, and go to state 94
    BVMOD_TOK                shift, and go to state 95
    SBVREM_TOK               shift, and go to state 96
    SBVMOD_TOK               shift, and go to state 97
    BVNEG_TOK                shift, and go to state 98
    BVAND_TOK                shift, and go to state 99
    BVOR_TOK                 shift, and go to state 100
    BVXOR_TOK                shift, and go to state 101
    BVNAND_TOK               shift, and go to state 102
    BVNOR_TOK                shift, and go to state 103
    BVXNOR_TOK               shift, and go to state 104
    BVCONCAT_TOK             shift, and go to state 105
    BVCOMP_TOK               shift, and go to state 106
    ITE_TOK                  shift, and go to state 107
    SELECT_TOK               shift, and go to state 108
    STORE_TOK                shift, and go to state 109

    an_term  go to state 116


State 57

   51 an_formula: LPAREN_TOK BVGE_TOK . an_term an_term RPAREN_TOK
